# sqlx_bookstore_assessment

./: .gitignore  Cargo.toml  check.out
migrations/: 20231010140113_create_authors.sql  20231010140650_create_books.sql  20231010140952_create_book_authors.sql  20231016133550_create_books.sql  20231016133704_create_authors.sql  20231016133908_create_book_authors.sql
seeds/: Cargo.toml  README.md  authors.csv  book_authors.csv  books.csv
seeds/queries/: authors.sql  book_authors.sql  books.sql
seeds/src/: lib.rs  main.rs
src/: authors.rs  books.rs  lib.rs
tests/: assessment.rs  test_authors.rs  test_books.rs
