[package]
name = "sqlx_bookstore_assessment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
eyre = "0.6.8"
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio-rustls", "migrate"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
seeds = { path = "./seeds" }

[workspace]
members = [
  "seeds"
]

[dev-dependencies]
rand = "0.8.5"
